syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bilgeadam.banking";
option java_outer_classname = "TransactionProto";

package com.bilgeadam.banking;

service TransactionService {
  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
  rpc Deposit(DepositRequest) returns (DepositResponse);
}

message WithdrawRequest {
  string accountNumber = 1;
  string amount = 2;
}

message WithdrawResponse {
  bool success = 1;
  string balance = 2;
}

message DepositRequest {
  string accountNumber = 1;
  string amount = 2;
}

message DepositResponse {
  bool success = 1;
  string balance = 2;
}
